# Nixie

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml  release.yml
auto_gmem/: Cargo.toml
auto_gmem/src/: error.rs  inject.rs  logging.rs  main.rs  runtime.rs  shm.rs  uvm.rs
auto_gmem/src/runtime/: daemon.rs  mod.rs  proc_ctl.rs  scheduler.rs  shm.rs
auto_gmem/src/uvm/: event_queue.rs  mod.rs  uvm_api.rs  uvm_binding.rs
auto_gmem_ipc/: Cargo.toml
auto_gmem_ipc/src/: lib.rs  shm.rs  sync.rs
cuda_hook/: Cargo.toml
cuda_hook/src/: comm.rs  intercept.rs  lib.rs  schedule.rs  sidecar.rs  snippet.rs
docs/: cli.md
kernel_module/: Makefile  auto_gmem_mod.c  autogmem_kmod.c
nihilapi/src/: lib.rs
nihilphased/src/: error.rs
nihilphased/src/runtime/: mod.rs  proc_ctl.rs  shm.rs
nihilphased/src/uvm/: mod.rs  uvm_binding.rs
nihilshim/: Cargo.toml
nihilshim/src/: comm.rs  snippet.rs
src/agent/: Cargo.toml
src/agent/src/: env_config.rs  init.rs  intercept.rs  intercept_launch.rs  lib.rs  prefetch.rs  snippet.rs  utils.rs
src/agent/src/comm/: comm.rs  communication.rs  controller.rs  init.rs  mod.rs  msg.rs
src/agent/src/memory/: attribute.rs  autodup.rs  mod.rs  prefetch.rs  streaming.rs
src/agent/src/schedule/: mem_ctl.rs  mod.rs  stats.rs  uvm_api.rs
src/api/: Cargo.toml
src/api/src/: shm.rs
src/common/: Cargo.toml
src/common/src/: constant.rs  general.rs  lib.rs  rpc.rs  shm.rs  shm_buffer.rs  sync.rs
src/daemon/: Cargo.toml
src/daemon/src/: config.rs  error.rs  general.rs  inject.rs  logging.rs  main.rs  staticly.rs
src/daemon/src/control/: client.rs  mod.rs  parse.rs
src/daemon/src/runtime/: daemon.rs  daemon_server.rs  mod.rs  proc_ctl.rs  sched_policy.rs  scheduler.rs  shm.rs
src/daemon/src/runtime/migration/: channel.rs  execution.rs  hostmem_buffer.rs  hybrid_buffer.rs  migration.rs  migration_plan.rs  mod.rs  shm_buffer.rs  storage_buffer.rs
src/daemon/src/runtime/schedule/: buffer_manager.rs  control.rs  migration.rs  migration_plan.rs  mod.rs  policy.rs  scheduler.rs  statistics.rs
src/daemon/src/runtime/swap/: buffer_manager.rs  hybrid_buffer.rs  migration.rs  migration_plan.rs  mod.rs  shm_buffer.rs
src/daemon/src/uvm/: event_queue.rs  uvm_api.rs
src/ipc/: Cargo.toml
src/ipc/src/: lib.rs  rpc.rs  shm.rs  sync.rs
src/shim/: Cargo.toml
src/shim/src/: comm.rs  intercept.rs  lib.rs  msg.rs  schedule.rs  sidecar.rs  utils.rs
src/sidecar/: Cargo.toml
src/sidecar/src/: cu_api.rs  env_config.rs  init.rs  intercept.rs  intercept_launch.rs  intercept_sync.rs  lib.rs  utils.rs
src/sidecar/src/comm/: communication.rs  controller.rs  init.rs  mod.rs  msg.rs
src/sidecar/src/memory/: alloc_tracking.rs  async_pool.rs  mod.rs  streaming.rs
src/sidecar/src/schedule/: mod.rs  stats.rs
uvm_api/: Cargo.toml
