[workspace]
resolver = "2"
members = ["src/daemon", "src/ipc", "src/shim"]

[workspace.dependencies]
nihilipc = { path = "src/ipc" }
bincode = "1.3.3"
futures = "0.3.31"
nix = { version = "0.28.0", features = ["fs", "user", "ioctl"] }
tarpc = { version = "0.35.0", features = ["serde-transport", "unix"] }
thiserror = "2"
