[workspace]
resolver = "2"
members = ["src/daemon", "src/ipc", "src/agent"]

[workspace.dependencies]
nihilipc = { path = "src/ipc" }
bincode = "1.3.3"
colored = "2.1.0"
futures = "0.3.31"
nix = { version = "0.29.0", features = ["fs", "user", "ioctl"] }
serde = { version = "1", features = ["derive"] }
tarpc = { version = "0.35.0", features = ["serde-transport", "unix"] }
thiserror = "2"
