[workspace]
resolver = "2"
members = ["src/daemon", "src/common", "src/sidecar"]

[workspace.dependencies]
bincode = "1.3.3"
colored = "2.1.0"
cudarc = { version = "0.19.0", default-features = false, features = [
    "std",
    "driver",
] }
futures = "0.3.31"
nix = { version = "0.29.0", features = ["fs", "user", "ioctl"] }
serde = { version = "1", features = ["derive"] }
tarpc = { version = "0.35.0", features = ["serde-transport", "unix"] }
thiserror = "2"

[profile.release]
debug = true
