[package]
name = "cuda_hook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
cudarc = { version = "0.10.0", default-features = false, features = [
    "std",
    "driver",
] }
once_cell = "1.19.0"
nix = { version = "0.28.0", features = ["fs"] }
