[package]
name = "cuda_hook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
auto_gmem_ipc = { path = "../auto_gmem_ipc" }

cudarc = { version = "0.10.0", default-features = false, features = [
    "std",
    "driver",
] }
nix = { version = "0.28.0", features = ["fs"] }
bincode = "1.3.3"
colored = "2.1.0"
