[package]
name = "nihil_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
nix.workspace = true
tarpc.workspace = true
thiserror.workspace = true
serde.workspace = true
cudarc.workspace = true
tokio = { version = "1" }

futures = "0.3.31"
