[package]
name = "nixie_common"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[features]
default = ["cuda-system"]
cuda-system = ["cudarc/cuda-version-from-build-system", "cudarc/dynamic-linking"]
ci-testing = ["cudarc/cuda-13000", "cudarc/fallback-dynamic-loading"]

[dependencies]
nix.workspace = true
tarpc.workspace = true
thiserror.workspace = true
serde.workspace = true
cudarc.workspace = true
tokio = { version = "1" }

futures = "0.3.31"
