[package]
name = "nihilphase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nihilipc.workspace = true
bincode.workspace = true
nix.workspace = true
tarpc.workspace = true
thiserror.workspace = true
futures.workspace = true
serde.workspace = true
colored.workspace = true
cudarc.workspace = true

async-bincode = "0.7.2"
clap = { version = "4.5.4", features = ["derive"] }
goblin = "0.8.0"
tokio = { version = "1.38.0", features = [
    "rt-multi-thread",
    "net",
    "sync",
    "macros",
    "signal",
    "io-util",
    "time",
] }
tokio-serde = { version = "0.9.0", features = ["serde_cbor", "cbor"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "std",
    "fmt",
    "json",
] }

is-root = "0.1.3"
chrono = "0.4.38"
syscalls = { version = "0.6.18", features = ["x86_64"] }
hashlink = "0.10.0"
nvml-wrapper = "0.10.0"
toml = "0.8.20"
