[package]
name = "nihilipc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
nix.workspace = true
tarpc.workspace = true
thiserror.workspace = true

serde = { version = "1", features = ["derive"] }
futures = "0.3.31"
