[package]
name = "nihilshim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
nihilipc.workspace = true
bincode.workspace = true
nix.workspace = true
tarpc.workspace = true

cudarc = { version = "0.10.0", default-features = false, features = [
    "std",
    "driver",
] }
colored = "2.1.0"
uuid = { version = "1.8.0", features = ["v4"] }
chrono = "0.4.38"
