[package]
name = "nihilsidecar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
nihil_common.workspace = true
bincode.workspace = true
nix.workspace = true
tarpc.workspace = true
futures.workspace = true
colored.workspace = true
cudarc.workspace = true

tokio = { version = "1.38.0", features = ["rt", "net", "macros"] }
tokio-serde = { version = "0.9.0", features = ["serde_cbor", "cbor"] }


uuid = { version = "1.8.0", features = ["v4"] }
chrono = "0.4.38"
flume = "0.11.1"
