[package]
name = "nixiesidecar"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
default = ["cuda-system"]
cuda-system = [
    "nixie_common/cuda-system",
    "cudarc/cuda-version-from-build-system",
    "cudarc/dynamic-linking",
]
cuda-12 = [
    "nixie_common/cuda-12",
    "cudarc/cuda-12000",
    "cudarc/fallback-dynamic-loading",
]
cuda-13 = [
    "nixie_common/cuda-13",
    "cudarc/cuda-13000",
    "cudarc/fallback-dynamic-loading",
]

[dependencies]
nixie_common = { path = "../common", default-features = false }
bincode.workspace = true
nix.workspace = true
tarpc.workspace = true
futures.workspace = true
colored.workspace = true
cudarc.workspace = true

tokio = { version = "1.38.0", features = ["rt", "net", "macros"] }
tokio-serde = { version = "0.9.0", features = ["serde_cbor", "cbor"] }


uuid = { version = "1.8.0", features = ["v4"] }
chrono = "0.4.38"
flume = "0.11.1"
